[package]
name = "string_similarity"
version = "0.1.0"
edition = "2021"
authors = ["jakemehlman <jdm365@georgetown.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version="0.16.5", features=["extension-module"]}
bitmaps = "3.2.0"


[lib]
name = "string_similarity"
crate-type = ["cdylib"]
