[package]
name = "weighted_levenshtein"
version = "0.1.0"
edition = "2021"
authors = ["jakemehlman <jdm365@georgetown.edu>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pyo3 = {version="0.16.5", features=["extension-module"]}


[lib]
name = "weighted_levenshtein"
crate-type = ["cdylib"]


[profile.release]
lto = "fat" 
codegen-units = 1
opt-level = 3
