[package]
name = "string_sim_metrics"
version = "0.1.2"
edition = "2021"
authors = ["jakemehlman <jdm365@georgetown.edu>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pyo3 = {version="~0.18.2", features=["extension-module"]}
rayon = "1.7.0"

[lib]
name = "string_sim_metrics"
crate-type = ["cdylib"]


[profile.release]
lto = "fat" 
codegen-units = 1
opt-level = 3
debug = false
